--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a:hover {
 
 .hero {
     height: 90vh;
-    background: url('images/imageFima1.png') no-repeat center center/cover;
+    background: url('https://images.unsplash.com/photo-1606811858624-f754c914c68f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
     position: relative;
 }
 
